syntax = "proto3";

option java_multiple_files = true;
option java_package = "base.pollutionSensor";
option java_outer_classname = "PollutionSensorImpl";

package PollutionSensor;

// Service 1: PollutionSensorService
service PollutionSensor {
    // Unary RPC Method: GetPollutionLevel
    rpc GetPollutionLevel (PollutionLocation) returns (PollutionReading) {}

    // Server Streaming RPC Method: SubscribeToPollutionUpdates
    rpc SubscribeToPollutionUpdates (PollutionLocation) returns (stream PollutionReading) {}

    // Unary RPC Method 3: GetPollutionHistory
    rpc GetPollutionHistory (PollutionHistoryRequest) returns (PollutionHistoryResponse) {}
}

message PollutionLocation {
    double latitude = 1;
    double longitude = 2;
}

message PollutionReading {
    double pollution_level = 1;
    string timestamp = 2;
}

message PollutionHistoryRequest {
    double latitude = 1;
    double longitude = 2;
    string start_date = 3;
    string end_date = 4;
}

message PollutionHistoryResponse {
    repeated PollutionReading pollution_readings = 1;
}
